tests/ui/wf/wf-struct-field.stderr
error[E0277]: the trait bound `A: Copy` is not satisfied
  --> $DIR/wf-struct-field.rs:12:11
   |
LL |     data: IsCopy<A>
   |           ^^^^^^^^^ the trait `Copy` is not implemented for `A`
   |
note: required by a bound in `IsCopy`
  --> $DIR/wf-struct-field.rs:7:17
   |
LL | struct IsCopy<T:Copy> {
   |                 ^^^^ required by this bound in `IsCopy`
help: consider restricting type parameter `A` with trait `Copy`
   |
LL | struct SomeStruct<A: std::marker::Copy> {
   |                    +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
